# godot-tts

./: .gitattributes  .gitignore  Cargo.toml  TTS.gd  build.gradle  godot-tts.gdnlib  godot-tts.gdnlib.release  plugin.cfg
src/: lib.rs
src/main/java/games/lightsout/godot/tts/: TTS.java
