[package]
name = "godot-tts"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
env_logger = "0.10"
gdnative = { git = "https://github.com/taeyoonwf/gdnative.git", features = ["custom-godot"] }
tts = { version = "0.25", features = ["tolk"] }
